--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,9 @@ jobs:
           - os: macos-latest
             target: x86_64-apple-darwin
 
+          - os: macos-latest
+            target: aarch64-apple-darwin
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
