--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,9 @@ jobs:
           - os: macos-latest
             target: x86_64-apple-darwin
 
+          - os: macos-latest
+            target: aarch64-apple-darwin
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
